--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Areas\Client\Data\" />
     <Folder Include="Areas\Client\Models\" />
+    <Folder Include="wwwroot\Admin\img\library\" />
   </ItemGroup>
 
   <ItemGroup>
