--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs/WebApp/FileContentIndex
+/.vs/WebApp/bin
+/.vs/WebApp/obj
